--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -1,7 +1,7 @@
 <div class="login">
     <form method="post" action="<%= do_login_url %>">
-        <input type="text" placeholder="用户名" name="username">
-        <input type="password" placeholder="密码" name="passwd">
+        <input type="text" placeholder="用户名" name="username" />
+        <input type="password" placeholder="密码" name="passwd" />
         
         <button type="submit" class="btn btn-primary btn-large" style="margin-top: -10px;">登录</button>
     </form>
