--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,12 +10,24 @@
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
-                <a class="brand">互众报销系统</a>
+                <a class="brand" href="/">互众报销系统</a>
                 <div class="nav-collapse">
+                    <% if session.has_key?("realname") %>
+                        <ul class="nav">
+                            <li><a href="<%= root_url %>">我的报销</a></li>
+                            <li><a href="/expense/myManage">我的批示</a></li>
+                        </ul>
+                    <% end %>
                 </div>
 
                 <div class="brand" style="float:right;">
                     Hello!
+                    <% if session.has_key?("realname") %>
+                        <%= session["realname"] %>
+                        <a href="<%= logout_url %>" style="font-size:12px; color:#FFF;">退出</a>
+                    <% else %>
+                        浪子
+                    <% end %>
                 </div>
             </div>
         </div>
@@ -28,5 +40,17 @@
     <footer style="text-align:center;">
         <p>Adeaz Expense System By Tech Department & Developed By Rails & Lucky on Ruby ^V^</p>
     </footer>
+    
+    <div id="popup-msg" class="alert" style="display:none"></div>
+    </div>
+    
+    <% if defined? @msg and @msg.has_key?("info") %>
+    <script>
+        $(function(){
+            popup_msg("<%= @msg["info"] %>", "<%= @msg["type"] %>");
+        });
+    </script>
+    <% end %>
+
 </body>
 </html>
