--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -1,4 +1,4 @@
-<div class="login">
+<div class="login" style="text-align:center;margin-top:150px">
     <form method="post" action="<%= do_login_url %>">
         <input type="text" placeholder="用户名" name="username" />
         <input type="password" placeholder="密码" name="passwd" />
