--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
         </div>
     </div>
     
-    <div id="container" style="text-align:center; margin-top:200px; width: 100%">
+    <div id="container" style="margin-top: 50px; width: 100%">
         <%= yield %>
     </div>
     
