--- a/app/views/expense/add.html.erb
+++ b/app/views/expense/add.html.erb
@@ -1,7 +1,14 @@
 <style type="text/css">
     #total { font-weight: bold; }
+    .ui-autocomplete-loading {
+        background: white url('/assets/ui-anim_basic_16x16.gif') right center no-repeat;
+    }
 </style>
-<script src="/assets/jquery.autocomplete.js"></script>
+<script src="/assets/autocomplete-ui/jquery.ui.core.js"></script>
+<script src="/assets/autocomplete-ui/jquery.ui.widget.js"></script>
+<script src="/assets/autocomplete-ui/jquery.ui.position.js"></script>
+<script src="/assets/autocomplete-ui/jquery.ui.menu.js"></script>
+<script src="/assets/autocomplete-ui/jquery.ui.autocomplete.js"></script>
 <div style="width:75%; margin:auto;">
     <form class="form-horizontal" action="<%= do_add_ex_path %>" method="post" autocomplete="off">
         <fieldset>
@@ -56,8 +63,8 @@
         </table>
 
         <div style="text-align: center;">
-            提交给谁?
-            <button id="do_add" class="btn btn-primary btn-large" type="submit">提交</button>
+            提交给谁?<span style="margin-left:10px;"><input type="text" name="step" id="step" style="width:120px;" placeholder="姓名拼音" /></span>
+            <button id="do_add" class="btn btn-primary btn-large" type="submit" style="margin-left:30px;">提交</button>
         </div>
     </form>
 </div>
@@ -82,6 +89,25 @@
 
             $("#total").html(num);
         }, 1000);
+
+
+        var cache = {};
+
+        $("#step").autocomplete({
+            minLength: 2,
+            source: function( request, response ) {
+                var term = request.term;
+                if ( term in cache ) {
+                    response( cache[ term ] );
+                    return;
+                }
+
+                $.getJSON("<%= jsonUser_path %>", request, function(data, status, xhr){
+                    cache[ term ] = data;
+                    response( data );
+                });
+            }
+        });
 
     });
 
