--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Adeaz Expense System</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "bootstrap/css/bootstrap-responsive.min", "bootstrap/css/bootstrap.min", "mc", media: "all", "data-turbolinks-track" => true %>
+  <%= javascript_include_tag "jquery", "jquery_ujs", "bootstrap/js/bootstrap.min", "common", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body style="background-color:#F2F9FD;">
